k8s/apps/frontend-demo/30-frontend-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-frontend
  namespace: demo
spec:
  type: NodePort
  selector:
    app: demo-frontend
  ports:
    - name: http
      port: 80
      targetPort: 8080
      nodePort: 30080
