k8s/apps/frontend-demo/35-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-frontend
  namespace: demo
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - demo.lab.local
      secretName: traefik-tls
  rules:
    - host: demo.lab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-frontend
                port:
                  number: 80
